@@ -5,7 +5,6 @@ DEADLINES
 DESIGN
 
 HIGH
-- Game level 4: force inversion of slope in GTL challenge with 2 points
 - Game: generate challenges for levels 5-6
 - Game dev: Level 7 = configure your own challenge
 - Game: add support for mismatching the line form on the left and right side of GTL and MTE challenges (consult design doc)
